Assignments/Team Member - 2 Sarveshvara/Assignment 4/Kubernetes/flask_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  # ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: flask-app-service
                port:
                  number: 5000
            path: /
            pathType: Prefix

FLASK SERVICE 
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
  selector:
    app: flask-app
DOCKER 

FROM python:3.10-buster

WORKDIR /app

COPY . .

RUN pip install --no-cache-dir -r requirements.txt

CMD ["gunicorn", "--bind", "0.0.0.0:5000", "app:app"]

REQUIREMENTS TEXT 

flask
gunicorn

APP.PY 
import uuid
from flask import Flask

instance_id = uuid.uuid4().hex
app = Flask(__name__)


@app.route("/")
def get_instance_id():
    return f"<b style='font-size:30px;color:red;'>Instance ID: {instance_id}</b>"



if __name__ == "__main__":
    app.run(port=5000, host="0.0.0.0")

DESKTOP .YML
apiVersion: v1
clusters:
- cluster:
    certificate-authority-data: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvakNDQWVhZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJeU1UQXdOVEUxTWpjME9Gb1hEVE15TVRBd01qRTFNamMwT0Zvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS3J5CnM2cC9iZTRBaTlPNmY3VjBuRHFYL0Roai9oQmlYWEhlT2dISHJkNWs0V1NjRTVzeUtWdERydUx3MVFrUEJVWkwKenlNWWQ2OEFSRDdnaGxpYzRhUnFJV09vOVNSVEVSaUo0RDJqZWJGWFR0d1BpZGFEUFlEVm85UlFBS0hBQXli [...]
    server: https://kubernetes.docker.internal:6443
  name: docker-desktop
contexts:
- context:
    cluster: docker-desktop
    user: docker-desktop
  name: docker-desktop
current-context: docker-desktop
kind: Config
preferences: {}
users:
- name: docker-desktop
  user:
    client-certificate-data: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURRakNDQWlxZ0F3SUJBZ0lJU3lNR3o4K1lDK013RFFZSktvWklodmNOQVFFTEJRQXdGVEVUTUJFR0ExVUUKQXhNS2EzVmlaWEp1WlhSbGN6QWVGdzB5TWpFd01EVXhOVEkzTkRoYUZ3MHlNekV3TURreE16TXdNVFJhTURZeApGekFWQmdOVkJBb1REbk41YzNSbGJUcHRZWE4wWlhKek1Sc3dHUVlEVlFRREV4SmtiMk5yWlhJdFptOXlMV1JsCmMydDBiM0F3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRHR2T1VUbElOZmw3MG8KK1hpR1o1d1VLbVZ6dnFPOW9ycXB4OE15aXViMUQ0dXkyMHlScUhPTEVwRHkxalpPV0szUHBGTUxGcXQ3QmZDLwp [...]
    client-key-data: LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQpNSUlFb2dJQkFBS0NBUUVBN2J6bEU1U0RYNWU5S1BsNGhtZWNGQ3BsYzc2anZhSzZxY2ZETW9ybTlRK0xzdHRNCmthaHppeEtROHRZMlRsaXR6NlJUQ3hhcmV3WHd2MUQyenU4eFpxVnducDFSM3lQSXhYVVJDSUFoTzVJQ09JSTkKOTdCVkZaeUlhMTA1MEdBSTR5c2h4UmZpMldxUHNEWUVQY2NDMndQZmdWZlhxMTloVFpjOVJLWU92d1duQjlPVwpRYXhlSG1ocDFMaVR6QWUvd2hFN2tZK1NCSnlVYTBKbHlhU0xtZkRNdDU2NWNyaFlOeDNOMmVhTG1qTGJLY2VDCmdDTGE5Y2FYaXlrcGxDM0J5TkIwUnluUkg5N3RCY293bVZ3SVgrQnd5ZXR2aUVMNzBXOEhDOE1XbHh2aXpWRE4KVGJ [...]
